--- a/sass/web.magazin/modules/_article-head.sass
+++ b/sass/web.magazin/modules/_article-head.sass
@@ -82,7 +82,7 @@ $standard-header-image-max-width: 31.25em
     font-size: $font-xs
     opacity: 0.0
     +transition(opacity .2s linear)
-    .figure__caption__text
+    .figure__text
       display: none
     .figure__copyright
       color: $grey--light
