--- a/sass/web.magazin/modules/_inline-gallery.sass
+++ b/sass/web.magazin/modules/_inline-gallery.sass
@@ -4,10 +4,27 @@ $gallery-button-radius: em(35px)
     margin: 0 auto em(60px)
 
 .inline-gallery
+    figure
+        margin: 0
+        padding: 0
+        clear: none
     .figure__media
         width: auto
         max-height: 620px
         margin: 0 auto
+    .figure__caption
+        color: $grey--mid
+        margin: $small auto 0
+        max-width: none
+        padding: 0
+        +respond-min($break-1)
+            padding-right: 30%
+    .figure__copyright
+        color: $charcoal
+        a
+            +link-colors($charcoal, $charcoal, $charcoal, $charcoal, $charcoal)
+            +on-interaction
+                border-color: $charcoal
 
 // appear just after bxSlider initialisation
 // needed for "static" galleries
@@ -18,62 +35,72 @@ html.js
         .inline-gallery
             visibility: visible
 
-.figure__caption__pager
-    +respond-min($break-1)
-        display: none
-
-// reset from bxSlider
 .bx-wrapper
-    position: relative
-    +has-layout()
-    +respond-min($break-1)
-        padding-top: $large
-
-    // figure elements in bxSlide
-    figure
-        margin: 0
-        padding: 0
-        clear: none
-    .figure__caption
-        color: $grey--mid
-        padding: 0
-        margin: $small auto 0
-        max-width: none
+    display: table
+    caption-side: top
+    width: 100%
+.bx-wrapper--touch
+    .bx-controls
+        padding: $page-padding
         +respond-min($break-1)
-            padding-right: 30%
-    .figure__caption__copyright
-        color: $charcoal
-        a
-            +link-colors($charcoal, $charcoal, $charcoal, $charcoal, $charcoal)
-            +on-interaction
-                border-color: $charcoal
+            padding: 0 0 $page-padding
+.bx-wrapper--no-touch
+    .bx-controls
+        padding: $page-padding
+        display: none
+        +respond-min($break-1)
+            display: table-caption
+            padding: 0 0 $page-padding
+    +respond-min($break-1)
+        .figure__index
+            display: none
+.bx-viewport
+    position: relative
 
 // controls
-.bx-pager
+.bx-controls
+    display: table-caption
+    text-align: right
+.bx-controls-direction
+    +inline-block
+.bx-wrapper--touch .bx-pager
+    font-size: 0
+    text-align: center
+.bx-wrapper--no-touch .bx-pager
     +inline-block
     color: $grey--mid
     font-family: $font-tabletgothic
     font-size: 0.9em
-    height: $gallery-button-radius
+    height: remify($gallery-button-radius)
+    line-height: remify($gallery-button-radius)
     width: 6em
     text-align: right
-    line-height: $gallery-button-radius + 0.5em
     padding-right: $fine
-.bx-controls
-    height: $gallery-button-radius
-    position: absolute
-    top: 0
-    right: 0
-    +respond-max($break-1)
-        display: none
-.bx-controls-direction
+.bx-pager-item
     +inline-block
+    font-size: 0
+    line-height: 0
+.bx-pager-link
+    background: #000
+    +opacity(0.3)
+    text-indent: -9999px
+    display: block
+    width: 10px
+    height: 10px
+    margin: 0 5px
+    outline: 0
+    border-radius: 50%
+    &:hover,
+    &.active,
+    &:focus
+        +opacity(0.7)
 .bx-prev,
 .bx-next
     +inline-block
     width: $gallery-button-radius
     height: $gallery-button-radius
     text-indent: -5000em
+    text-align: left
     margin-left: 10px
     border-radius: 50%
     background-color: #000
