--- a/sass/web.site/modules/_article.sass
+++ b/sass/web.site/modules/_article.sass
@@ -84,3 +84,9 @@
 	+respond-min($break-desktop-min)
 		margin: $thin remify(80px) 0 remify(80px)
 		font-size: remify(16px)
+
+.figure__copyright
+	color: $zon_grey
+	a
+		// normal, hover, active, visited, focus
+		+link-colors($zon_grey, $color-link--hover, $color-link--active, $zon_grey, $color-link--focus)
