--- a/sass/web.site/modules/_inline-gallery.sass
+++ b/sass/web.site/modules/_inline-gallery.sass
@@ -1,13 +1,24 @@
 $gallery-button-radius: em(35px)
+$break-gallery-min: em(576px)
 
 .inline-gallery__wrap
-    margin: 0 auto em(60px)
+    @extend .gallery
 
 .inline-gallery
+    figure
+        margin: 0
+        padding: 0
     .figure__media
         width: auto
         max-height: 620px
         margin: 0 auto
+    .figure__caption
+        font-style: normal
+        margin: $small auto 0
+        max-width: none
+        padding: 0 $page-padding
+        +respond-min($break-tablet-min)
+            padding: 0
 
 // appear just after bxSlider initialisation
 // needed for "static" galleries
@@ -18,56 +29,61 @@ html.js
         .inline-gallery
             visibility: visible
 
-.figure__caption__pager
-    +respond-min($break-1)
-        display: none
-
-// reset from bxSlider
 .bx-wrapper
+    display: table
+    caption-side: top
+    width: 100%
+.bx-wrapper--touch
+    .bx-controls
+        padding: $page-padding
+        +respond-min($break-tablet-min)
+            padding: 0 0 $page-padding
+.bx-wrapper--no-touch
+    .bx-controls
+        padding: $page-padding
+        display: none
+        +respond-min($break-gallery-min)
+            display: table-caption
+        +respond-min($break-tablet-min)
+            padding: 0 0 $page-padding
+    +respond-min($break-gallery-min)
+        .figure__index
+            display: none
+.bx-viewport
     position: relative
-    +has-layout()
-    +respond-min($break-1)
-        padding-top: $large
-
-    // figure elements in bxSlide
-    figure
-        margin: 0
-        padding: 0
-        clear: none
-    .figure__caption
-        color: $grey--mid
-        padding: 0
-        margin: $small auto 0
-        max-width: none
-        +respond-min($break-1)
-            padding-right: 30%
-    .figure__caption__copyright
-        color: $charcoal
-        a
-            +link-colors($charcoal, $charcoal, $charcoal, $charcoal, $charcoal)
-            +on-interaction
-                border-color: $charcoal
 
 // controls
-.bx-pager
-    +inline-block
-    color: $grey--mid
-    font-family: $font-tabletgothic
-    font-size: 0.9em
-    height: $gallery-button-radius
-    width: 6em
-    text-align: right
-    line-height: $gallery-button-radius + 0.5em
-    padding-right: $fine
 .bx-controls
-    height: $gallery-button-radius
-    position: absolute
-    top: 0
-    right: 0
-    +respond-max($break-1)
-        display: none
+    display: table-caption
 .bx-controls-direction
+    float: right
+.bx-wrapper--touch .bx-pager
+    font-size: 0
+    text-align: center
+.bx-wrapper--no-touch .bx-pager
+    float: right
+    height: remify($gallery-button-radius)
+    line-height: remify($gallery-button-radius)
+    padding-right: .5em
+.bx-pager-item
     +inline-block
+    font-size: 0
+    line-height: 0
+.bx-pager-link
+    background: #000
+    +opacity(0.3)
+    text-indent: -9999px
+    display: block
+    width: 10px
+    height: 10px
+    margin: 0 5px
+    outline: 0
+    border-radius: 50%
+    &:hover,
+    &.active,
+    &:focus
+        +opacity(0.7)
+
 .bx-prev,
 .bx-next
     +inline-block
@@ -94,7 +110,7 @@ html.js
     margin: 0
     position: absolute
     top: em(10px)
-    +respond-min($break-1)
+    +respond-min($break-phablet-min)
         top: 50%
         margin-top: -$gallery-button-radius
         width: $gallery-button-radius * 2
@@ -119,8 +135,7 @@ html.js
     z-index: 9999
     cursor: pointer
     display: none
-    // background-color: rgba(255,0,0,.1)
-    +respond-min($break-1)
+    +respond-min($break-phablet-min)
         width: 50%
         height: 90%
         display: block
@@ -138,3 +153,27 @@ html.js
 .bx-controls-auto,
 .bx-loading
     display: none
+
+// @todo styles for no javascript
+// .no-js .inline-gallery
+//     figure
+//         margin-top: 0
+//         margin-bottom: $little
+//         position: relative
+//         &:first-child
+//             margin-top: $medium
+//     .figure__caption
+//         bottom: 0
+//         color: $white
+//         font-size: em(18px)
+//         left: 0
+//         margin: 0
+//         max-width: 100%
+//         padding: $little
+//         position: absolute
+//         text-shadow: 1px 1px 3px $black
+//         width: 100%
+//         z-index: 9999
+//     .figure__copyright
+//         display: block
+//         color: $grey
