Revise initial value for height

--- a/sass/web.magazin/modules/_cp-teaser-button.sass
+++ b/sass/web.magazin/modules/_cp-teaser-button.sass
@@ -124,7 +124,7 @@ $cp_button-gallery-height: em(386px)
 .cp_button--cover
 	.cp_button__image
 		@extend %cp_shadow--darker
-		height: initial
+		height: auto
 		img
 			width: 100%
 
