--- a/src/zeit/web/magazin/templates/inc/teaser/zmo-print-cover.html
+++ b/src/zeit/web/magazin/templates/inc/teaser/zmo-print-cover.html
@@ -15,7 +15,7 @@ Parameters:
 
 <div class="cp_button cp_button--cover">
     <a href="{{ teaser | create_url }}">
-        <div class="scaled-image cp_button__image" data-wrap=".cp_button__image">
+        <div class="scaled-image cp_button__image">
             {{ lama.insert_responsive_image(image) }}
         </div>
     </a>
