--- a/src/zeit/web/magazin/templates/inc/teaser/abstract/abstract_button_teaser_template.html
+++ b/src/zeit/web/magazin/templates/inc/teaser/abstract/abstract_button_teaser_template.html
@@ -32,7 +32,7 @@ All calling templates have to provide:
                 {{ lama.insert_responsive_image(image, self.image_class()) }}
         {%- else -%}
             {# call standard image asset #}
-            <div class="scaled-image is-pixelperfect cp_button__image" data-wrap=".cp_button__image">
+            <div class="scaled-image is-pixelperfect cp_button__image">
                 {{ lama.insert_responsive_image(image) }}
         {%- endif %}
             </div>
