ZON-1437: Improve naming consistency

--- a/src/zeit/web/magazin/templates/inc/teaser/abstract/abstract_leader_teaser_template.html
+++ b/src/zeit/web/magazin/templates/inc/teaser/abstract/abstract_leader_teaser_template.html
@@ -26,7 +26,7 @@ All calling templates have to provide:
 
     {# call comment box #}
     {% if self.format() != 'full' -%}
-         {{ cp.comments_count(get_teaser_commentcount(teaser.uniqueId), teaser | create_url) }}
+         {{ cp.comment_count(view.comment_counts[teaser.uniqueId], teaser | create_url) }}
     {%- endif %}
 
     <a href="{{ teaser | create_url }}">
