--- a/src/zeit/web/magazin/templates/inc/teaser/abstract/abstract_button_teaser_template.html
+++ b/src/zeit/web/magazin/templates/inc/teaser/abstract/abstract_button_teaser_template.html
@@ -23,7 +23,7 @@ All calling templates have to provide:
 
 <div class="cp_button cp_button--{{ self.format() }}{{ cp.advertorial_modifier(teaser.product_text, view.is_advertorial) | default('') }}">
 
-    {{ cp.comments_count(get_teaser_commentcount(teaser.uniqueId), teaser | create_url) }}
+    {{ cp.comment_count(view.comment_counts[teaser.uniqueId], teaser | create_url) }}
     <a href="{{ teaser | create_url }}">
 
         {% if self.image_class() != 'false' -%}
