--- a/src/zeit/web/site/templates/gallery.html
+++ b/src/zeit/web/site/templates/gallery.html
@@ -4,7 +4,7 @@
     <div class="article-page">
         {{ blocks.inlinegallery(view.images, wrapper_class='gallery') }}
     </div>
-    <div class="article__page gallery__info">
+    <div class="article-page">
         <div class="gallery__description">
             {{ view.galleryText|safe }}
         </div>
