--- a/sass/web.magazin/modules/_inline-gallery.sass
+++ b/sass/web.magazin/modules/_inline-gallery.sass
@@ -1,4 +1,5 @@
 $gallery-button-radius: em(35px)
+$gallery-dots-diameter: 8px
 
 .inline-gallery__wrap
     margin: 0 auto em(60px)
@@ -41,9 +42,9 @@ html.js
     width: 100%
 .bx-wrapper--touch
     .bx-controls
-        padding: $page-padding
+        padding: $page-padding $page-padding 1em
         +respond-min($break-1)
-            padding: 0 0 $page-padding
+            padding: 0 0 1em
 .bx-wrapper--no-touch
     .bx-controls
         padding: $page-padding
@@ -61,10 +62,14 @@ html.js
 .bx-controls
     display: table-caption
     text-align: right
+    padding: $page-padding $page-padding em(12px)
+    +respond-min($break-1)
+        padding: 0 0 em(14px)
 .bx-controls-direction
     +inline-block
 .bx-wrapper--touch .bx-pager
-    font-size: 0
+    font-size: $gallery-dots-diameter
+    line-height: 1.5
     text-align: center
 .bx-wrapper--no-touch .bx-pager
     +inline-block
@@ -85,9 +90,9 @@ html.js
     +opacity(0.3)
     text-indent: -9999px
     display: block
-    width: 10px
-    height: 10px
-    margin: 0 5px
+    width: $gallery-dots-diameter
+    height: $gallery-dots-diameter
+    margin: 0 $gallery-dots-diameter/2
     outline: 0
     border-radius: 50%
     &:hover,
