--- a/sass/web.site/modules/_article.sass
+++ b/sass/web.site/modules/_article.sass
@@ -81,6 +81,7 @@
 	font-style: italic
 	line-height: 1.5
 	margin: $thin $page-padding 0 $page-padding
+	color: $zon_dark_grey
 	+respond-min($break-desktop-min)
 		margin: $thin remify(80px) 0 remify(80px)
 		font-size: remify(16px)
