--- a/sass/web.site/modules/_inline-gallery.sass
+++ b/sass/web.site/modules/_inline-gallery.sass
@@ -1,4 +1,5 @@
 $gallery-button-radius: em(35px)
+$gallery-dots-diameter: 8px
 $break-gallery-min: em(576px)
 
 .inline-gallery__wrap
@@ -13,8 +14,7 @@ $break-gallery-min: em(576px)
         max-height: 620px
         margin: 0 auto
     .figure__caption
-        font-style: normal
-        margin: $small auto 0
+        margin: 1em auto 0
         max-width: none
         padding: 0 $page-padding
         +respond-min($break-tablet-min)
@@ -35,9 +35,9 @@ html.js
     width: 100%
 .bx-wrapper--touch
     .bx-controls
-        padding: $page-padding
+        padding: $page-padding $page-padding 1em
         +respond-min($break-tablet-min)
-            padding: 0 0 $page-padding
+            padding: 0 0 1em
 .bx-wrapper--no-touch
     .bx-controls
         padding: $page-padding
@@ -58,7 +58,8 @@ html.js
 .bx-controls-direction
     float: right
 .bx-wrapper--touch .bx-pager
-    font-size: 0
+    font-size: $gallery-dots-diameter
+    line-height: 1.5
     text-align: center
 .bx-wrapper--no-touch .bx-pager
     float: right
@@ -74,9 +75,9 @@ html.js
     +opacity(0.3)
     text-indent: -9999px
     display: block
-    width: 10px
-    height: 10px
-    margin: 0 5px
+    width: $gallery-dots-diameter
+    height: $gallery-dots-diameter
+    margin: 0 $gallery-dots-diameter/2
     outline: 0
     border-radius: 50%
     &:hover,
