ZON-1498: Tweak gallery index

--- a/sass/web.site/modules/_inline-gallery.sass
+++ b/sass/web.site/modules/_inline-gallery.sass
@@ -19,6 +19,12 @@ $break-gallery-min: em(576px)
         padding: 0 $page-padding
         +respond-min($break-tablet-min)
             padding: 0
+    .figure__index
+        color: $zon_grey
+        font-family: $font-tabletgothic
+        font-style: normal
+        font-size: 0.875em // uses em by intention
+        letter-spacing: $zon-letter-spacing-m
 
 // appear just after bxSlider initialisation
 // needed for "static" galleries
