--- a/sass/web.site/modules/video/_video-text-playbutton.sass
+++ b/sass/web.site/modules/video/_video-text-playbutton.sass
@@ -29,5 +29,8 @@
 			margin: 0
 	&--inline
 		display: inline
+		+respond-min($break-desktop-min)
+			display: block
+			padding-top: remify(7px)
 	&--hidden
 		display: none
