--- a/sass/web.site/modules/video/_video-thumbnail.sass
+++ b/sass/web.site/modules/video/_video-thumbnail.sass
@@ -1,9 +1,46 @@
 .video-thumbnail
 	margin: 0 (-$page-padding)
-	+teaser-image-dark-overlay
 	+respond-min($break-phablet-min)
 		margin: 0
 	+old-ie
 		&__still
 			width: 100%
+	&__helper
+		overflow: hidden
+	&__still
+		transform: scale(1)
+		+transition-property(all)
+		+transition-duration(.12s)
+		+transition-timing-function(ease-in-out)
+		// :after itself does not hover, so the after in a hovered element
+		// @at-root makes the jump out of the nesting
+		// #{} echoes our selector
+		@at-root .video-small__combined-link:hover #{&}
+			transform: scale(1.05)
+	&--large
+		+teaser-image-dark-overlay
+	&--small
+		background: $black
+		position: relative
+		&:after
+			bottom: 0
+			content: ''
+			height: 100%
+			left: 0
+			opacity: 1
+			position: absolute
+			right: 0
+			top: 0
+			width: 100%
+			z-index: 1
+			+background-image(linear-gradient(to bottom, rgba($black, 0.3) 0%, rgba($black, 0.8) 100%))
+			+transition-property(opacity)
+			+transition-duration(.12s)
+			+transition-timing-function(ease-in-out)
+		// :after itself does not hover, so the after in a hovered element
+		// @at-root makes the jump out of the nesting
+		// #{} echoes our selector
+		@at-root .video-small__combined-link:hover #{&}
+			&:after
+				opacity: 0.5
 
