ZON-1079: line-height fix

--- a/sass/web.site/modules/teaser/_teaser-blog.sass
+++ b/sass/web.site/modules/teaser/_teaser-blog.sass
@@ -31,6 +31,7 @@
 		margin-right: remify(2px)
 	&__name
 		display: inline
+		line-height: 1.2
 	&__kicker
 		+inline-block(baseline)
 		font-weight: normal
