ZON-1486: document mixin and make it boolish

--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -232,10 +232,13 @@
 =zon-button-light
 	+zon-button(rgba(255,255,255, 0.5), rgba(255,255,255, 0.8), $zon_light_grey, $zon_mid_grey, $zon-charcoal, $black, $zon-charcoal)
 
-// please use extremely carefully http://usabilitypost.com/2012/11/05/stop-fixing-font-smoothing/
-// rather use case may be light text on dark background
-=font-smoothing($value: on)
-	@if $value == on
+/// mac font smoothing switching
+/// please use extremely carefully http://usabilitypost.com/2012/11/05/stop-fixing-font-smoothing/
+/// rather use case may be **light text on dark background**
+/// switching off fontsmoothing is prohibited except on high density mobile safari screens (see media query)
+/// @param {bool} $antialiased [true] - switch on antialiasing
+=font-smoothing($antialiased: true)
+	@if $antialiased
 		-webkit-font-smoothing: antialiased
 		-moz-osx-font-smoothing: grayscale
 	@else
