ZON-1486: Use mixings and last polishing
c/o David

--- a/sass/web.site/modules/video/_video-large-title.sass
+++ b/sass/web.site/modules/video/_video-large-title.sass
@@ -13,10 +13,11 @@
 		display: block
 		font-size: remify(14px)
 		font-weight: normal
+		letter-spacing: $zon-letter-spacing-l
 	&__title
 		display: block
 		font-size: remify(16px)
-		+font-smoothing(on)
+		+font-smoothing()
 		+respond-min($break-phablet-min)
 			font-size: remify(20px)
 		+respond-min($break-tablet-min)
