--- a/sass/web.site/modules/video/_video-thumbnail.sass
+++ b/sass/web.site/modules/video/_video-thumbnail.sass
@@ -9,13 +9,7 @@
 		overflow: hidden
 	&__still
 		transform: scale(1)
-		+transition-property(all)
-		+transition-duration(.12s)
-		+transition-timing-function(ease-in-out)
-		// :after itself does not hover, so the after in a hovered element
-		// @at-root makes the jump out of the nesting
-		// #{} echoes our selector
-		@at-root .video-small__combined-link:hover #{&}
+		+transition-on-hover(&, '.video-small__combined-link', (property: all, delay: 0, duration: .5s, timing: ease-in-out))
 			transform: scale(1.05)
 	&--large
 		+teaser-image-dark-overlay
@@ -34,13 +28,6 @@
 			width: 100%
 			z-index: 1
 			+background-image(linear-gradient(to bottom, rgba($black, 0.3) 0%, rgba($black, 0.8) 100%))
-			+transition-property(opacity)
-			+transition-duration(.12s)
-			+transition-timing-function(ease-in-out)
-		// :after itself does not hover, so the after in a hovered element
-		// @at-root makes the jump out of the nesting
-		// #{} echoes our selector
-		@at-root .video-small__combined-link:hover #{&}
-			&:after
-				opacity: 0.5
+			+transition-on-hover(&, '.video-small__combined-link')
+				opacity: .5
 
