--- a/sass/web.site/modules/video/_video-thumbnail.sass
+++ b/sass/web.site/modules/video/_video-thumbnail.sass
@@ -12,7 +12,21 @@
 		+transition-on-hover(&, '.video-small__combined-link', (property: all, delay: 0, duration: .5s, timing: ease-in-out))
 			transform: scale(1.05)
 	&--large
-		+teaser-image-dark-overlay
+		background-color: $black
+		position: relative
+		&:after
+			bottom: 0
+			content: ''
+			left: 0
+			min-height: 100%
+			min-width: 100%
+			position: absolute
+			right: 0
+			top: 0
+			z-index: 1
+			+background-image(linear-gradient(to top, rgba($black, 1) 0%, rgba($black, 0.2) 45%, rgba($black, 0)))
+			+respond-min($break-tablet-min)
+				+background-image(linear-gradient(15deg, rgba($black, 0.5) 0%, rgba($black, 0.05) 60%))
 	&--small
 		background: $black
 		position: relative
