--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -109,7 +109,8 @@
 	letter-spacing: $zon-letter-spacing-s
 
 %teaser-datetime
-	display: inline-block // needed for text-transform to work
+	&:not(:empty)
+		display: inline-block // needed for text-transform to work
 	&:first-letter
 		text-transform: uppercase
 	&:not(:last-child):not(:empty):after
