--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -32,7 +32,7 @@
 		+background-image(linear-gradient($direction, rgba($color, $alpha_start) 0%, rgba($color, $alpha_stop) $length))
 		z-index: 1
 
-=teaser-image-dark-overlay($color: $black)
+=teaser-image-dark-overlay($color: rgb(0, 15, 20))
 	background-color: $color
 	position: relative
 	&:after
@@ -45,9 +45,7 @@
 		right: 0
 		top: 0
 		z-index: 1
-		+background-image(linear-gradient(to top, rgba($color, 1) 0%, rgba($color, 0.2) 35%, rgba($color, 0)))
-		+respond-min($break-tablet-min)
-			+background-image(linear-gradient(15deg, rgba($color, 0.5) 0%, rgba($color, 0.05) 60%))
+		+background-image(linear-gradient(12deg, rgba($color, 0.6) 15%, rgba($color, 0.15) 52%, rgba($color, 0) 70%))
 
 =no-user-select
 	-webkit-touch-callout: none
