ZON-1486: Minimize mixin output

--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -252,16 +252,13 @@
 /// @param {element|bool} $parent [false] - parent element for hover effect, if not supplied the $element is used
 /// @param {map} $trans - transition properties
 /// @property {string} $trans.property [opacity] - transition property
-/// @property {number} $trans.delay [0] - transition delay
 /// @property {number} $trans.duration [.5s] - transition duration
+/// @property {number} $trans.delay [0] - transition delay
 /// @property {string} $trans.timing [ease-in-out] - transition timing function
 /// @content css of the animated state
 /// @output styles for the element, the parent (@-rooted) if applicable and the hover state
-=transition-on-hover($elem, $parent: false, $trans: (property: opacity, delay: 0, duration: .5s, timing: ease-in-out))
-	+transition-property( map-get($trans, property) )
-	+transition-delay( map-get($trans, delay) )
-	+transition-duration( map-get($trans, duration) )
-	+transition-timing-function( map-get($trans, timing) )
+=transition-on-hover($elem, $parent: false, $trans: (property: opacity, duration: .5s, delay: 0, timing: ease-in-out))
+	+transition( map-get($trans, property) map-get($trans, duration) map-get($trans, delay) map-get($trans, timing) )
 	@if not $parent
 		&:hover
 			#{$elem}
