ZON-1486: Make mixin arguments optional

--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -257,8 +257,10 @@
 /// @property {string} $trans.timing [ease-in-out] - transition timing function
 /// @content css of the animated state
 /// @output styles for the element, the parent (@-rooted) if applicable and the hover state
-=transition-on-hover($elem, $parent: false, $trans: (property: opacity, duration: .5s, delay: 0, timing: ease-in-out))
-	+transition( map-get($trans, property) map-get($trans, duration) map-get($trans, delay) map-get($trans, timing) )
+=transition-on-hover($elem, $parent: false, $trans: ())
+	$default-transition: ("property": opacity, "duration": .5s, "delay": 0, "timing": ease-in-out)
+	$transition: map_merge($default-transition, $trans)
+	+transition( map-get($transition, "property") map-get($transition, "duration") map-get($transition, "delay") map-get($transition, "timing") )
 	@if not $parent
 		&:hover
 			#{$elem}
