ZON-1486: simplify mixin

--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -246,30 +246,24 @@
 			-webkit-font-smoothing: subpixel-antialiased
 			-moz-osx-font-smoothing: auto
 
-/// animating elements *on hover*
-/// if a parent element is given, the hover event is tied to this element
+/// animating elements *on hover* over one of it's parents
 /// @param {element} $element - the element to play animation on
-/// @param {element|bool} $parent [false] - parent element for hover effect, if not supplied the $element is used
+/// @param {element} $parent  - parent element for hover effect, if not supplied the $element is used
 /// @param {map} $trans - transition properties
 /// @property {string} $trans.property [opacity] - transition property
 /// @property {number} $trans.duration [.5s] - transition duration
 /// @property {number} $trans.delay [0] - transition delay
 /// @property {string} $trans.timing [ease-in-out] - transition timing function
 /// @content css of the animated state
-/// @output styles for the element, the parent (@-rooted) if applicable and the hover state
-=transition-on-hover($elem, $parent: false, $trans: ())
+/// @output styles for the element, the parent (@-rooted) and the hover state
+=transition-on-parent-hover($elem, $parent, $trans: ())
 	$default-transition: ("property": opacity, "duration": .5s, "delay": 0, "timing": ease-in-out)
 	$transition: map_merge($default-transition, $trans)
 	+transition( map-get($transition, "property") map-get($transition, "duration") map-get($transition, "delay") map-get($transition, "timing") )
-	@if not $parent
+	@at-root #{$parent}
 		&:hover
 			#{$elem}
 				@content
-	@else
-		@at-root #{$parent}
-			&:hover
-				#{$elem}
-					@content
 
 // pseudo classes
 %off-screen
