--- a/sass/web.site/modules/video/_video-small-title.sass
+++ b/sass/web.site/modules/video/_video-small-title.sass
@@ -12,7 +12,7 @@
 		font-weight: normal
 		letter-spacing: $zon-letter-spacing-l
 		margin-bottom: remify(4px)
-		+transition-on-hover(&, '.video-small__combined-link')
+		+transition-on-parent-hover(&, '.video-small__combined-link')
 			opacity: 0.5
 		+respond-min($break-desktop-min)
 			display: block
@@ -21,5 +21,5 @@
 		font-size: remify(16px)
 		letter-spacing: $zon-letter-spacing-s
 		+font-smoothing()
-		+transition-on-hover(&, '.video-small__combined-link')
+		+transition-on-parent-hover(&, '.video-small__combined-link')
 			opacity: 0.5
