ZON-1441: Refactor block article-heading

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -58,7 +58,8 @@
 @import "modules/iqd_adcode"
 
 // article
-@import "modules/article"
+@import "modules/article/article"
+@import "modules/article/article-heading"
 @import "modules/pagination"
 
 // comments
