--- a/src/zeit/web/site/templates/content.html
+++ b/src/zeit/web/site/templates/content.html
@@ -7,10 +7,10 @@
     {% profile %}
         {% block article_heading %}
         <h1 class="article-heading">
-            <span class="kicker">
+            <span class="article-heading__kicker">
                 {{- view.supertitle | hide_none -}}
             </span>
-            <span class="title">
+            <span class="article-heading__title">
                 {{- view.title | hide_none -}}
             </span>
         </h1>
