--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -247,7 +247,6 @@
 			-moz-osx-font-smoothing: auto
 
 /// animating elements *on hover* over one of it's parents
-/// @param {element} $element - the element to play animation on
 /// @param {element} $parent  - parent element for hover effect, if not supplied the $element is used
 /// @param {map} $trans - transition properties
 /// @property {string} $trans.property [opacity] - transition property
@@ -256,13 +255,14 @@
 /// @property {string} $trans.timing [ease-in-out] - transition timing function
 /// @content css of the animated state
 /// @output styles for the element, the parent (@-rooted) and the hover state
-=transition-on-parent-hover($elem, $parent, $trans: ())
+=transition-on-parent-hover($parent, $trans: ())
+	$element: &
 	$default-transition: ("property": opacity, "duration": .5s, "delay": 0, "timing": ease-in-out)
 	$transition: map_merge($default-transition, $trans)
 	+transition( map-get($transition, "property") map-get($transition, "duration") map-get($transition, "delay") map-get($transition, "timing") )
 	@at-root #{$parent}
 		&:hover
-			#{$elem}
+			#{$element}
 				@content
 
 // pseudo classes
