--- a/sass/web.site/modules/video/_video-thumbnail.sass
+++ b/sass/web.site/modules/video/_video-thumbnail.sass
@@ -9,7 +9,7 @@
 		overflow: hidden
 	&__still
 		+transform(scale(1))
-		+transition-on-parent-hover(&, '.video-small__combined-link', (property: transform))
+		+transition-on-parent-hover('.video-small__combined-link', (property: transform))
 			+transform(scale(1.05))
 	&--large
 		background-color: $black
@@ -42,6 +42,6 @@
 			width: 100%
 			z-index: 1
 			+background-image(linear-gradient(to bottom, rgba($black, 0.3) 0%, rgba($black, 0.8) 100%))
-			+transition-on-parent-hover(&, '.video-small__combined-link')
+			+transition-on-parent-hover('.video-small__combined-link')
 				opacity: .5
 
