--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -8,7 +8,8 @@
 // ---------- Configure compass ----------
 // browsers() = android, android-chrome, android-firefox, blackberry, chrome, firefox, ie, ie-mobile, ios-safari, opera, opera-mini, opera-mobile, safari
 // $supported-browsers: ("chrome", "firefox", "ie", "safari")
-// $debug-browser-support: true
+// @if compass-env() == "development"
+//     $debug-browser-support: true
 
 $svg-gradient-shim-threshold: 100 // Disable SVG gradient support in Opera and IE9
 
