ZON-1441: Add styling

--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -74,6 +74,7 @@ $zon-bar-height-phablet-px: 54px
 $zon-bar-height-phablet: em($zon-bar-height-phablet-px)
 
 // margins
-$page-padding: remify($petite--px)
+$page-padding: remify(20px)
 $video-title-padding--px: 15px
 $video-title-padding: remify($video-title-padding--px)
+$article-gutter-desktop: remify( (980px - 660px) / 2 )
