--- a/sass/web.site/modules/article/_article-heading.sass
+++ b/sass/web.site/modules/article/_article-heading.sass
@@ -15,3 +15,10 @@
 		line-height: 1.2
 		+respond-min($break-desktop-min)
 			font-size: remify(42px)
+	&--breaking-news
+		background: #FFFEE9
+		margin: 0 (-$page-padding) remify(25px) (-$page-padding)
+		padding: remify(25px) $page-padding
+		+respond-min($break-desktop-min)
+			margin: 0 (-$article-gutter-desktop) remify(25px) (-$article-gutter-desktop)
+			padding: remify(45px) $article-gutter-desktop
