--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -58,6 +58,7 @@
 @import "modules/iqd_adcode"
 
 // article
+@import "modules/breaking-news-banner"
 @import "modules/article/article"
 @import "modules/article/article-heading"
 @import "modules/pagination"
