Add font smoothing to video button

--- a/sass/web.site/modules/video/_video-text-playbutton.sass
+++ b/sass/web.site/modules/video/_video-text-playbutton.sass
@@ -2,6 +2,7 @@
 	color: lighten(#777, 20%)
 	font-size: remify(14px)
 	font-weight: 300
+	+font-smoothing()
 	&:before
 		content: '\25B6' // ▶ = Black right-pointing triangle
 		font-size: 90%
