Use font-smoothing mixin

--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -82,7 +82,7 @@
 			position: absolute
 			top: 0
 			width: 100%
-			-webkit-font-smoothing: antialiased
+			+font-smoothing()
 			&:after
 				content: '\203A' // › = Single right-pointing angle quotation mark
 				position: absolute
