--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -239,6 +239,7 @@
 	@if $antialiased
 		-webkit-font-smoothing: antialiased
 		-moz-osx-font-smoothing: grayscale
+		text-rendering: optimizeLegibility
 	@else
 		@media only screen and (-webkit-min-device-pixel-ratio: 1.25), only screen and ( min-device-pixel-ratio: 1.25), only screen and ( min-resolution: 200dpi), only screen and ( min-resolution: 1.25dppx)
 			-webkit-font-smoothing: subpixel-antialiased
