Update fullwidth teaser

--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -1,9 +1,10 @@
 .teaser-fullwidth
 	@extend %teaser
 	border-bottom: 1px solid $zon_light_grey
+	padding-top: 0
 	+respond-min($break-tablet-min)
 		border-bottom: none
-		margin-bottom: $petite
+		margin: $petite 0
 		overflow: hidden
 		padding: 0
 		position: relative
