--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -29,8 +29,8 @@
 		right: 0
 		top: 0
 		width: 100%
-		+background-image(linear-gradient($direction, rgba($color, $alpha_start) 0%, rgba($color, $alpha_stop) $length))
 		z-index: 1
+		+background-image(linear-gradient($direction, rgba($color, $alpha_start) 0%, rgba($color, $alpha_stop) $length))
 
 =teaser-image-dark-overlay($color: rgb(0, 15, 20))
 	background-color: $color
@@ -38,12 +38,12 @@
 	&:after
 		bottom: 0
 		content: ''
+		height: 100%
 		left: 0
-		min-height: 100%
-		min-width: 100%
 		position: absolute
 		right: 0
 		top: 0
+		width: 100%
 		z-index: 1
 		+background-image(linear-gradient(12deg, rgba($color, 0.6) 15%, rgba($color, 0.15) 52%, rgba($color, 0) 70%))
 
