--- a/sass/web.site/modules/_header.sass
+++ b/sass/web.site/modules/_header.sass
@@ -7,7 +7,7 @@
     +clearfix
     color: $zon_dark_grey
     display: none
-    font-size: $font-11px
+    font-size: remify(11px)
     letter-spacing: $zon-letter-spacing-l
     line-height: 1rem
     text-transform: uppercase
