--- a/sass/web.site/modules/_nav.sass
+++ b/sass/web.site/modules/_nav.sass
@@ -43,7 +43,7 @@ $zon-search-square-size: remify(35px)
 		+link-colors($black, $black, $black, $black, $black)
 	+respond-min($break-tablet-min)
 		width: auto
-		font-size: $font-xxxs
+		font-size: remify(9px)
 		text-transform: uppercase
 		color: $zon_grey
 		a
