--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -68,7 +68,7 @@
 	&__title
 		@extend %teaser-title
 		color: $white
-		font-size: $zon-font-m
+		font-size: $font-mxl
 		line-height: 1.12
 		&:hover
 			color: $white
