--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -50,7 +50,7 @@
 	display: block
 	color: $color-text-highlighted
 	font-family: $font-tabletgothicnarrow
-	font-size: $zon-font-s
+	font-size: $font-ss
 	font-weight: bold
 	letter-spacing: $zon-letter-spacing-m
 	line-height: 1.2
