--- a/sass/web.site/modules/_breaking-news-banner.sass
+++ b/sass/web.site/modules/_breaking-news-banner.sass
@@ -1,12 +1,12 @@
 .breaking-news-banner
-	background: #FFE25A
+	background: #ffe246
 	color: $black
 	font-size: remify(14px)
 	font-weight: bold
 	letter-spacing: $zon-letter-spacing-m
 	line-height: 1
 	margin: 0 (-$page-padding)
-	padding: remify(17px) 0
+	padding: remify(18px) 0
 	text-align: center
 	text-transform: uppercase
 	+respond-min($break-desktop-min)
