--- a/sass/web.site/modules/article/_article-heading.sass
+++ b/sass/web.site/modules/article/_article-heading.sass
@@ -16,7 +16,7 @@
 		+respond-min($break-desktop-min)
 			font-size: remify(42px)
 	&--breaking-news
-		background: #FFFEE9
+		background: #fffee8
 		margin: 0 (-$page-padding) remify(25px) (-$page-padding)
 		padding: remify(25px) $page-padding
 		+respond-min($break-desktop-min)
