ZON-1390: Update basic styles

--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -40,15 +40,15 @@ $spektrum_de_blue: #4d86a4
 // semantic colors
 $color-body-bg: $white
 $color-page-bg: $white
-$color-text: $black
+$color-text: $zon-charcoal
 $color-text-highlighted: $zon-red
 $color-canvas-bg: $white
 $color-quote: $grey--dark
-$color-link--default: $zon_grey
-$color-link--visited: $zon_grey
-$color-link--hover: $black
-$color-link--active: $black
-$color-link--focus: $black
+$color-link--default: $zon-charcoal
+$color-link--visited: $zon-charcoal
+$color-link--hover: $zon-red
+$color-link--active: $zon-red
+$color-link--focus: $zon-red
 $color-input: $grey--mid
 $color-input-bg: $grey--light
 $color-border: $zon-alto
