--- a/sass/web.site/modules/article/_article.sass
+++ b/sass/web.site/modules/article/_article.sass
@@ -13,6 +13,7 @@
 		font-size: remify(24px)
 
 .summary,
+.byline,
 .article__page-teaser
 	color: $grey--mid
 	font-size: remify(18px)
@@ -28,18 +29,22 @@
 	margin-bottom: $little
 	+respond-min($break-desktop-min)
 		font-size: remify(20px)
+	a
+		border-bottom: 1px solid rgba($color-link--default, .5)
+		+transition-property(border-bottom-color color)
+		+transition-duration(.2s)
+		&:focus
+			border-bottom-color: rgba($color-link--focus, .5)
+		&:hover
+			border-bottom-color: rgba($color-link--hover, .5)
+		&:active
+			border-bottom-color: rgba($color-link--active, .5)
 
 .byline
-	color: $grey--mid
 	margin-bottom: remify(40px)
 
 .byline__author
 	font-weight: bold
-	+link
-		color: inherit
-		text-decoration: none
-	+on-interaction
-		text-decoration: underline
 
 .metadata
 	color: $zon_grey
@@ -71,3 +76,9 @@
 	a
 		// normal, hover, active, visited, focus
 		+link-colors($zon_grey, $color-link--hover, $color-link--active, $zon_grey, $color-link--focus)
+
+.figure__text
+// @todo
+
+.figure__copyright
+
