ZON-1288: schema.org itemtype Article

--- a/src/zeit/web/site/templates/content.html
+++ b/src/zeit/web/site/templates/content.html
@@ -3,7 +3,7 @@
 
 {% block main %}
     {% block content %}
-    <article class="article" id="js-article">
+    <article class="article" id="js-article" itemtype="http://schema.org/Article" itemscope>
     {% profile %}
         {% block article_heading %}
         <h1 class="article-heading">
