--- a/sass/web.site/modules/article/_article-heading.sass
+++ b/sass/web.site/modules/article/_article-heading.sass
@@ -15,6 +15,8 @@
 		line-height: 1.2
 		+respond-min($break-desktop-min)
 			font-size: remify(42px)
+	&__colon
+		+visuallyhidden
 	&--breaking-news
 		background: #fffee8
 		margin: 0 (-$page-padding) remify(25px) (-$page-padding)
