Fine-tune compass config
Including small SASS bug fixes

--- a/sass/_constants.sass
+++ b/sass/_constants.sass
@@ -105,21 +105,21 @@ $serif-fallbacks: Georgia, Palatino, "Palatino Linotype", FreeSerif, serif
 
 // utility colors
 $yellow:         #ffe117 !default
-$red:            #990000 !default
+$red:            #900 !default
 $dark-red:       #7c0e14 !default
 $blue:           #355bde !default
 $midnight:       #1f2091 !default
 
-$white:          #ffffff !default
+$white:          #fff !default
 $grey--bright:   #f9f9f9 !default
 $grey--light:    #eeeeee !default
 $gainsboro:      #e0e0e0 !default
 $charcoal:       #aaaaaa !default
 $grey:           #777777 !default
 $grey--mid:      #444444 !default
-$grey--dark:     #333332 !default
+$grey--dark:     #333 !default
 $grey--mid-dark: #252525 !default
-$black:          #000000 !default
+$black:          #000 !default
 $greyish-white:  #e9e9e9 !default
 
 // social
