--- a/sass/web.magazin/modules/_comments.sass
+++ b/sass/web.magazin/modules/_comments.sass
@@ -133,7 +133,7 @@ $comments-min-width: $comments__break-outside - $max-page-width
     text-align: center
     .button
         +inline-block
-        +background-size(20%, 20%)
+        +background-size(20%)
         background-position: 10px center
         text-align: center
         cursor: pointer
