--- a/sass/web.magazin/modules/_copyrights.sass
+++ b/sass/web.magazin/modules/_copyrights.sass
@@ -12,9 +12,9 @@ $copyrights__close--label-height: em(22px)
     display: none
 
 .copyrights__entry__image
+    +background-size(cover)
     background-position: center center
     background-repeat: no-repeat
-    background-size: cover
     display: inline-block
     height: $copyrights__entry__image-height
     width: $copyrights__entry__image-width
