--- a/sass/web.magazin/modules/_cp-buzz.sass
+++ b/sass/web.magazin/modules/_cp-buzz.sass
@@ -33,7 +33,7 @@
         padding: $big 0
 
 .cp_buzz__icon
-    background-size: cover
+    +background-size(cover)
     display: inline-block
     line-height: $medium
     margin-right: $fine
