--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -24,7 +24,7 @@
 
 	&__logo
 		&--spektrum
-			background-size: contain
+			+background-size(contain)
 			display: inline-block
 			height: remify(30px)
 			text-indent: -50000em
