--- a/sass/web.site/modules/teaser/_teaser-buzz.sass
+++ b/sass/web.site/modules/teaser/_teaser-buzz.sass
@@ -62,7 +62,7 @@
 	margin: $micro 0 0 0
 
 	&__icon
-		background-size: contain
+		+background-size(contain)
 		display: inline-block
 		height: $small
 		width: $small
