--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -3,15 +3,7 @@
 
 @charset "UTF-8"
 
-@import compass
-
-// ---------- Configure compass ----------
-// browsers() = android, android-chrome, android-firefox, blackberry, chrome, firefox, ie, ie-mobile, ios-safari, opera, opera-mini, opera-mobile, safari
-// $supported-browsers: ("chrome", "firefox", "ie", "safari")
-// @if compass-env() == "development"
-//     $debug-browser-support: true
-
-$svg-gradient-shim-threshold: 100 // Disable SVG gradient support in Opera and IE9
+@import "setup"
 
 @import "../vendor/normalize.css"
 
