--- a/sass/web.magazin/modules/_footer.sass
+++ b/sass/web.magazin/modules/_footer.sass
@@ -8,9 +8,9 @@
     +clearfix
 
 .main-footer__logo
+    +background-size(contain)
     width: 41px
     height: 20px
-    background-size: contain
     margin: $micro $little $compact 0
     opacity: 0.3
 
