--- a/sass/web.site/all-old-ie.sass
+++ b/sass/web.site/all-old-ie.sass
@@ -3,6 +3,11 @@ $rem-to-px-conversion: true
 $fix-mqs: 64em
 $fix-mqs-h: 48em
 
+// compass config
+$opacity-usage-threshold: 0.1
+$inline-block-support-threshold: 0.1
+$has-layout-support-threshold: 0.01
+
 @import screen
 
 // fixes for IE8:
@@ -10,7 +15,7 @@ $fix-mqs-h: 48em
 // recently, not to fix many bugs in IE8 but to fallback
 // as much as possible. Some fixes though are applied
 // to logos and completely utter things
-// 
+//
 // this file is only loaded under IE lte 8
 
 // just do not note styles here
