--- a/sass/web.site/modules/_footer.sass
+++ b/sass/web.site/modules/_footer.sass
@@ -8,9 +8,9 @@ $footer_button_icon_height: em(14px)
 $footer_button_icon_width: em(10px)
 
 %footer_icons
-	display: block
-	background-size: contain
+	+background-size(contain)
 	background-position: 50% 50%
+	display: block
 
 %footer_bar
 	min-height: $footer_bar_min_height
@@ -60,12 +60,12 @@ $footer_button_icon_width: em(10px)
 	+respond-min($break-tablet-min)
 		width: 100%
 		display: inline-block !important
-		padding: 0px 0px 0px 0px
+		padding: 0
 
 %footer_list
 	list-style: none
-	padding: 0px
-	margin: 0px
+	padding: 0
+	margin: 0
 
 %footer_item
 	display: inline-block
