--- a/sass/web.site/modules/_inline-gallery.sass
+++ b/sass/web.site/modules/_inline-gallery.sass
@@ -94,6 +94,7 @@ html.js
 .bx-prev,
 .bx-next
     +inline-block
+    +background-size(20%)
     width: $gallery-button-radius
     height: $gallery-button-radius
     text-indent: -5000em
@@ -101,7 +102,6 @@ html.js
     border-radius: 50%
     background-color: #000
     background-position: 50% 50%
-    background-size: 20%
     color: #fff
     border: none
     +opacity(0.3)
