--- a/sass/web.site/modules/_nav.sass
+++ b/sass/web.site/modules/_nav.sass
@@ -24,9 +24,9 @@ $zon-search-square-size: remify(35px)
 			display: inline-block !important
 
 %main_nav_icons
-	display: block
-	background-size: contain
+	+background-size(contain)
 	background-position: 50% 50%
+	display: block
 
 %main_nav_links
 	display: inline-block
@@ -73,11 +73,9 @@ $zon-search-square-size: remify(35px)
 	+justify-content(space-between)
 	+order(10)
 	margin: 0
-	width: 100%
 	+respond-min($break-tablet-min)
-		+remove_nav_bar_style()
+		+remove_nav_bar_style($width: $zon-logo-width)
 		+order(40)
-		width: $zon-logo-width
 		margin: $petite 0 $petite 0
 
 .logo_bar__menue
@@ -115,9 +113,8 @@ $zon-search-square-size: remify(35px)
 	+order(20)
 	text-align: left
 	+respond-min($break-tablet-min)
-		+remove_nav_bar_style()
+		+remove_nav_bar_style($width: 7%)
 		+order(30)
-		width: 7%
 		text-align: right
 		display: inline-block
 		a
@@ -130,7 +127,7 @@ $zon-search-square-size: remify(35px)
 	width: $small
 	height: $small
 	position: relative
-	top: $dblhair + $hair
+	top: 3px
 	margin-right: $micro
 	+respond-min($break-tablet-min)
 		display: none
@@ -164,9 +161,8 @@ $zon-search-square-size: remify(35px)
 			li
 				width: 33%
 	+respond-min($break-tablet-min)
-		+remove_nav_bar_style()
+		+remove_nav_bar_style($width: 55%)
 		+order(10)
-		width: 55%
 		text-align: left
 		& > ul
 			margin-right: $petite
@@ -201,9 +197,8 @@ $zon-search-square-size: remify(35px)
 				border-left: 1px solid $zon_light_grey
 				border-right: 1px solid $zon_light_grey
 	+respond-min($break-tablet-min)
-		+remove_nav_bar_style()
+		+remove_nav_bar_style($width: 38%)
 		+order(20)
-		width: 38%
 		text-align: right
 		padding-left: auto
 		& > ul
@@ -224,7 +219,6 @@ $zon-search-square-size: remify(35px)
 	text-align: left
 	+order(60)
 	margin: 0
-	width: 100%
 	+respond-min($break-tablet-min)
 		+remove_nav_bar_style()
 		+order(50)
@@ -317,7 +311,7 @@ $zon-search-square-size: remify(35px)
 		+columns(3)
 	+respond-min($break-tablet-min)
 		+columns(auto)
-		border-bottom: $dblhair solid $zon_light_grey
+		border-bottom: 2px solid $zon_light_grey
 		display: block
 		font-size: $font-s
 		padding: 0
@@ -359,9 +353,9 @@ $zon-search-square-size: remify(35px)
 		padding-right: 0
 
 	.primary-nav__link
-		+border-radius(3px)
 		+link-colors($white)
 		background-color: $zon_dark_grey
+		border-radius: 3px
 		+transition(background-color .15s linear)
 		padding: 0 $fine
 		&:hover
@@ -393,7 +387,7 @@ $zon-search-square-size: remify(35px)
 	+respond-min($break-tablet-min)
 		box-shadow: 0 $micro $thin rgba(0,0,0,0.05)
 		background: $white
-		border: $dblhair solid $zon_light_grey
+		border: 2px solid $zon_light_grey
 		left: -$fine
 		min-width: $mediumhuge
 		padding-left: 0
