--- a/sass/web.site/modules/teaser/_teaser-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-column.sass
@@ -13,12 +13,12 @@ $teaser-column-mobile-image-size: 80px
 	padding:   $petite $petite $petite
 	margin: 40px (-$page-padding) $petite (-$page-padding)
 	position: relative
-	+box-shadow(inset 0 $teaser-column-shadow 0 0 $color-column-shadow)
+	box-shadow: inset 0 $teaser-column-shadow 0 0 $color-column-shadow
 	+respond-min($break-tablet-min)
 		margin-left: 0
 		margin-right: 0
 	+respond-min($break-desktop-min)
-		+box-shadow(none)
+		box-shadow: none
 		margin: $petite 0 $petite 0
 		min-height: remify(250px)
 		padding: $petite $petite $petite ($teaser-image-desktop-width + $petite)
